--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.1.0",
     "@types/styled-components-react-native": "^5.1.1",
     "expo": "~41.0.0",
+    "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "prettier": "^2.2.1",
     "react": "16.13.1",
