--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "stylelint": "^13.12.0",
+    "stylelint-config-recommended": "^4.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
