--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.1.0",
+    "@expo/match-media": "^0.1.0",
+    "@types/react-responsive": "^8.0.2",
     "@types/styled-components-react-native": "^5.1.1",
     "expo": "~41.0.0",
     "expo-font": "~9.1.0",
@@ -18,6 +20,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-web": "~0.13.12",
+    "react-responsive": "^8.2.0",
     "styled-components": "^5.2.3",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
