added router to navbar, patform-helper

--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "tomskeda",
     "slug": "tomskeda",
+    "scheme": "tomskeda",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
