--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "@reduxjs/toolkit": "^1.5.1",
+    "@types/react-redux": "^7.1.16",
     "@types/react-responsive": "^8.0.2",
     "@types/styled-components-react-native": "^5.1.1",
     "expo": "~41.0.0",
@@ -28,6 +30,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.3",
     "react-responsive": "^8.2.0",
     "styled-components": "^5.2.3",
     "stylelint": "^13.12.0",
