--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.3",
     "react-responsive": "^8.2.0",
+    "redux-observable": "^1.2.0",
+    "rxjs": "^6.6.7",
     "styled-components": "^5.2.3",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
