--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "@reduxjs/toolkit": "^1.5.1",
+    "@types/date-fns": "^2.6.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-responsive": "^8.0.2",
     "@types/styled-components-react-native": "^5.1.1",
+    "date-fns": "^2.21.1",
     "expo": "~41.0.0",
     "expo-font": "~9.1.0",
     "expo-linking": "^2.2.3",
